fix docs for pidfilepath SERVER-1706